# P9-SLAM-RL

./: .gitignore  .gitmodules  README.md
Ignition_Worlds/: diff_test_lidar.sdf  lidar.launch
custom_gym/: CMakeLists.txt  package.xml
custom_gym/launch/: RL_learner.launch
custom_gym/msg/: Num.msg
custom_gym/scripts/: P9RLEnv.py  test.py
custom_gym/src/: CMakeList.txt  Makefile  P9RLEnv.py  StepFunction.cpp  goal_publish.py  remove.cpp  spawner.cpp
custom_gym/srv/: StepFunction.srv  spawner.srv
ign_py/: CMakeLists.txt  package.xml  setup.py  test.py
ign_py/src/: ign_py.cpp
lidar_modifier/: CMakeLists.txt  package.xml
lidar_modifier/src/: lidar_inf_to_max_range.cpp
navigation/: package.xml
navigation/launch/: navigation.launch
navigation/params/: base_local_planner_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
odom_transform/: package.xml
odom_transform/src/: static_turtle_tf2_broadcaster.cpp
simulations/: package.xml
simulations/launch/: gazebo.launch  gmapping.launch  lidar.launch  test_launch.launch
simulations/models/: ballbot.sdf  boxbot.sdf  moving_ballbot.sdf  robot.sdf
simulations/rviz/: lidar.rviz
simulations/world/: box_rooms_world.sdf  box_wall_world.sdf  box_wall_world_test.sdf  box_world.sdf  diff_test_lidar.sdf  empty_rooms_world.sdf  empty_wall_world.sdf  empty_wall_world_test.sdf
slam_gmapping/: README.md
slam_gmapping/gmapping/: CMakeLists.txt
src/Ignition_Worlds/: lidar.launch
src/odom_transform/: CMakeLists.txt
src/simulations/: CMakeLists.txt
(+509 files in other folders)
